--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -26,16 +26,16 @@
     border-radius: 10px;
     border: 2px solid $soft-bg;
 
-    transition:
-      border-color 0.25s ease,
-      transform 0.25s ease-out,
-      box-shadow 0.25s ease;
+    // transition:
+    //   border-color 0.25s ease,
+    //   transform 0.25s ease-out,
+    //   box-shadow 0.25s ease;
 
-    &:hover {
-      border-color: $main-color;
-      transform: translateY(-4px);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
-    }
+    // &:hover {
+    //   border-color: $main-color;
+    //   transform: translateY(-4px);
+    //   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+    // }
   }
 
   .box1 {
