--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,5 +1,6 @@
-@import "../../styles/responsive.scss";
-@import "../../styles/variables.scss";
+@use "../../styles/variables.scss" as *;
+@use "../../styles/responsive.scss" as *;
+
 
 .menu {
   .item {
